<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Internet"
    tools:showIn="@layout/activity_internet">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="30dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/cuatro"
                    app:srcCompat="@mipmap/cuatro" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="151dp"

                    android:padding="10dp"
                    android:text="@string/desc4"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:gravity="right"
                android:orientation="horizontal"
                android:padding="30dp"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="175dp"
                    android:layout_height="151dp"

                    android:padding="10dp"
                    android:text="@string/des6"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/seis"
                    app:srcCompat="@mipmap/seis" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="30dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/ocho"
                    app:srcCompat="@mipmap/ocho" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="151dp"

                    android:padding="10dp"
                    android:text="@string/des8"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:gravity="right"
                android:orientation="horizontal"
                android:padding="30dp"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="175dp"
                    android:layout_height="151dp"

                    android:padding="10dp"
                    android:text="@string/des10"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/diez"
                    app:srcCompat="@mipmap/diez" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>