<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".duo"
    tools:showIn="@layout/activity_duo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="145dp"

                android:background="@color/design_default_color_primary_dark"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="253dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ottplayercanales"
                    android:contentDescription="@string/outtcanales" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="148dp"

                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="73dp"
                    android:layout_height="120dp"

                    android:contentDescription="@string/ottplayer"
                    app:srcCompat="@mipmap/ottplayer" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="73dp"
                    android:layout_height="120dp"
                    app:srcCompat="@mipmap/cuatro"
                    android:contentDescription="@string/cuatro" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="164dp"
                    android:layout_height="120dp"

                    android:text="@string/des_cuatroduo"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="148dp"

                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="164dp"
                    android:layout_height="120dp"

                    android:text="@string/des_ochoduo"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="73dp"
                    android:layout_height="120dp"
                    app:srcCompat="@mipmap/ocho"
                    android:contentDescription="@string/ocho" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="73dp"
                    android:layout_height="120dp"


                    android:contentDescription="@string/ottplayer"
                    app:srcCompat="@mipmap/ottplayer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="148dp"

                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="73dp"
                    android:layout_height="120dp"


                    android:contentDescription="@string/ottplayer"
                    app:srcCompat="@mipmap/ottplayer" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="73dp"
                    android:layout_height="120dp"
                    app:srcCompat="@mipmap/diez"
                    android:contentDescription="@string/diez" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="164dp"
                    android:layout_height="120dp"

                    android:text="@string/des_diezduo"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>