<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Principal"
    tools:showIn="@layout/app_bar_principal">

    <ScrollView
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount,UselessParent">


        <LinearLayout
            android:id="@+id/fondo_imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary_dark"
            android:gravity="top|center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="210dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/casitodo"
                    app:srcCompat="@mipmap/principal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/plex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/titulo_plex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_plex"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="219dp"
                    android:contentDescription="@string/plex"
                    app:srcCompat="@mipmap/plex" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plex_descripcion"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cable"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="193dp"
                    android:contentDescription="@string/imagen_cable"
                    app:srcCompat="@mipmap/cable" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cable_descripcion"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>


        </LinearLayout>

        


    </ScrollView>

</LinearLayout>