<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".perfil"
    tools:showIn="@layout/activity_perfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary_dark"
            android:gravity="bottom|center"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="140dp"
                android:layout_height="114dp"
                android:background="@android:color/background_light"
                app:srcCompat="@mipmap/iconperfil"
                android:contentDescription="@string/imagen_perfil" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/perfil_mensajes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/mensajesperfil"
                android:textColor="@color/letras"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/solicitudesperfil"
                android:textColor="@color/letras"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/serviciosperfil"
                android:textColor="@color/letras"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>