<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            tools:ignore="InefficientWeight" />
    </LinearLayout>
</LinearLayout>